sensord (0.6.22) unstable; urgency=low

  *

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 30 Aug 2010 09:47:38 +0300

sensord (0.6.21) unstable; urgency=low

  * Potentially solved bug #180060. Can't reproduce locally.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Thu, 26 Aug 2010 08:53:44 +0300

sensord (0.6.20) unstable; urgency=low

  * Implements: SWP#MaSSW-1892
  * Fixed deadclient test
  * Fixes: NB#179034 -  small improvements that are nice to have for sensord

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 28 Jul 2010 14:57:31 +0300

sensord (0.6.19) unstable; urgency=low

  * Sections for adaptor name resolving to configuration file
  * ContextSensor to behave sanely in absence of CompassChain
  * MetaData (range, description) fetched from the previous node in chain.
  * standyOverride -requests propagated via the filterchain.
  * Fixes: NB#175217 -  Sensord adaptors must be able to reject displayBlankOverride -requests
  * Magnetometer output scaled by coefficient from configuration file
  * Accelerometer coordinate tranformation matrix in configuration file

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 06 Jul 2010 12:52:55 +0300

sensord (0.6.18) unstable; urgency=low

  * 4hz rate for desktop orientation detection
  * MetaData value changes

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Mon, 21 Jun 2010 17:36:33 +0300

sensord (0.6.17) unstable; urgency=low

  [Timo Rongas]
  * Implements: SWP#MaSSW-1931
  * Fixes: NB#175555: Orientation change policy incorrect

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Fri, 18 Jun 2010 16:00:22 +0300

sensord (0.6.16) unstable; urgency=low

  * Fixed compilation issue for tests (yet another dummy tag)

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 15 Jun 2010 14:13:55 +0300

sensord (0.6.15) unstable; urgency=low

  [Timo Rongas]
  * Fixes: NB#173973 - Proximity sensor stays "on" if I move my hand away slowly
  * Implements: SWP#MaSSW-1897
